# fluidSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  run  run1  run2
include/: Const.hpp  FastFixed.hpp  Fixed.hpp  FixedInner.hpp  Fluid.hpp  Matrix.hpp  ParticleParams.hpp  Simulator.hpp  VectorField.hpp  argv_parse.hpp  type_list.hpp  type_marker.hpp
saves/: file1.out  file2.out
src/: Const.cpp  argv_parse.cpp  main.cpp
tests/: data.in  data_heavy.in
